@@ -1,3 +1,11 @@
+Wed Apr  8 13:14:29 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>
+
+. Description:
+
+	Wrote sizeof(SV *) instead of sizeof(I32) when portable, which
+	in effect mangled the object tags and prevented portability
+	accross 32/64 bit architectures!
+
 Wed Mar 25 14:57:02 MET 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>
 
 . Description:
